# corporate-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  example.env  example.env.anthropic  example.env.google  example.env.openai  pyproject.toml
config/: api_format.yaml  headers.yaml  models.yaml  settings.yaml  system_prompt.yaml
docs/: Architecture.md  CONTRIBUTING.md  PRD.md  TDD.md  capabilities.md  custom-api-format.md
docs/provider-profiles/: prd.md  tdd.md  test-plan.md
prompts/code-changes/: PROMPT.md
prompts/debugger/: PROMPT.md
prompts/default/: PROMPT.md
prompts/minimal/: PROMPT.md
prompts/planner/: PROMPT.md
prompts/project-manager/: PROMPT.md
prompts/refactorer/: PROMPT.md
prompts/reviewer/: PROMPT.md
prompts/system-architect/: PROMPT.md
prompts/tester/: PROMPT.md
scripts/: build.sh  clean.sh  format.sh  help.sh  lint.sh  run.sh  setup.sh  test.sh
skills/brainstorming/: SKILL.md
skills/commit-msg/: SKILL.md
skills/dependency-map/: SKILL.md
skills/doc-gen/: SKILL.md
skills/executing-plans/: SKILL.md
skills/explain/: SKILL.md
tests/: conftest.py  test_agent.py  test_analyzer.py  test_applier.py  test_auth.py  test_bundler.py  test_chunker.py  test_cli.py  test_client.py  test_config.py  test_display.py  test_git_ops.py  test_mapper.py  test_prompt_loader.py  test_prompt_registry.py  test_refactor_ops.py  test_repl.py  test_search_replace.py  test_session.py  test_session_stores.py  test_skill_executor.py  test_skill_loader.py  test_skill_registry.py  test_streaming.py  test_token_tracker.py  test_workspace.py
(+45 files in other folders)
